S302T200-318 #time 1h Implemented searching by business type on frontend and backend. This included making two more specification builders and a specification support function. wrote jest tests ?implement ?test
